# Improve Code
* Add default constructors
* Lower cyclomatic complexities